--- a/fixture/default/core/Mage/CmsStaticBlock/uimap/admin/CmsStaticBlock.yml
+++ b/fixture/default/core/Mage/CmsStaticBlock/uimap/admin/CmsStaticBlock.yml
@@ -28,7 +28,7 @@
 # 'Static Blocks' page
 manage_cms_static_blocks:
     mca: cms_block/
-    click_xpath: //div[@class='nav-bar']//a[span='Static Blocks']
+    click_xpath: //div[@class='nav-bar']//a[contains(@href, '/cms_block/')]
     title: Static Blocks / CMS / Magento Admin
     uimap:
         form: &searchStaticBlocksGrid
