--- a/fixture/default/core/Mage/Product/uimap/admin/Product.yml
+++ b/fixture/default/core/Mage/Product/uimap/admin/Product.yml
@@ -28,7 +28,7 @@
 # Manage Product page
 manage_products:
     mca: catalog_product/
-    click_xpath: //div[@class='nav-bar']//a[span='Manage Products']
+    click_xpath: //div[@class='nav-bar']//a[contains(@href, '/catalog_product/')]
     title: Manage Products / Catalog / Magento Admin
     uimap: &manageProductsUimap
         form: &searchProductGrid
@@ -80,7 +80,7 @@ manage_products:
 
 manage_products_store:
     mca: catalog_product/index/store/%storeId%/
-    click_xpath: //div[@class='nav-bar']//a[span='Manage Products']
+    click_xpath: //div[@class='nav-bar']//a[contains(@href, '/catalog_product/')]
     title: Manage Products / Catalog / Magento Admin
     uimap: *manageProductsUimap
 
