--- a/fixture/default/core/Mage/CustomerGroup/uimap/admin/CustomerGroup.yml
+++ b/fixture/default/core/Mage/CustomerGroup/uimap/admin/CustomerGroup.yml
@@ -29,7 +29,7 @@
 # 'Manage Customer Groups' page
 manage_customer_groups:
     mca: customer_group/
-    click_xpath: //div[@class='nav-bar']//a[span='Customer Groups']
+    click_xpath: //div[@class='nav-bar']//a[contains(@href, '/customer_group/')]
     title: Customer Groups / Customers / Magento Admin
     uimap:
         form: &searchCustomerGroupsGrid
