--- a/fixture/default/core/Mage/Newsletter/uimap/admin/Newsletter.yml
+++ b/fixture/default/core/Mage/Newsletter/uimap/admin/Newsletter.yml
@@ -28,7 +28,7 @@
 # Newsletter Subscribers Manager page
 newsletter_subscribers:
     mca: newsletter_subscriber/
-    click_xpath: //div[@class='nav-bar']//a[span='Newsletter Subscribers']
+    click_xpath: //ul[@id='nav']//a[contains(@href, '/newsletter_subscriber/')]
     title: Newsletter Subscribers / Newsletter / Magento Admin
     uimap:
         form: &searchSubscribers
