Implemented MAGETWO-1956: Implemented TL-MAGE-5686

--- a/dev/tests/functional/fixture/community2/core/Mage/ImportExport/data/ImportExport.yml
+++ b/dev/tests/functional/fixture/community2/core/Mage/ImportExport/data/ImportExport.yml
@@ -104,9 +104,9 @@ customer_account_with_attribute:
 #Test data for Customer Addresses file export
 generic_address:
     prefix: %noValue%
-    first_name: Ronald
+    first_name: Ronald_%randomize%
     middle_name: J.
-    last_name: Jackson
+    last_name: Jackson_%randomize%
     suffix: %noValue%
     company: Earl Abel's
     street_address_line_1: 209 Capitol Avenue
