Implemented MAGETWO-2022: Сover the “vde_page” widget with js unit tests - Tests for JavaScript code implemented for widget "vde_page"

--- a/dev/tests/js/jsTestDriver.conf
+++ b/dev/tests/js/jsTestDriver.conf
@@ -11,6 +11,8 @@ load:
   - ../../../app/code/core/Mage/DesignEditor/view/frontend/js/design_editor.js
   - ../../../pub/js/jquery/jstree/jquery.jstree.js
   - ../../../pub/js/jquery/slimScroll/slimScroll.min.js
+  - ../../../app/code/core/Mage/Page/view/frontend/js/cookies.js
+  - ../../../app/code/core/Mage/DesignEditor/view/frontend/css/styles.css
 test:
   - ../../../dev/tests/js/testsuite/mage/localization/*.js
   - ../../../dev/tests/js/testsuite/mage/design_editor/*.js
