Implement MAGETWO-1185: javascript refactor - initialize translate from cookie - js unit test using js test driver - js static code analysis using jsHint

--- a/dev/tests/js/jsTestDriver.conf
+++ b/dev/tests/js/jsTestDriver.conf
@@ -4,6 +4,7 @@ load:
   - ../../../pub/lib/globalize/*.js
   - ../../../pub/lib/globalize/cultures/*.js
   - ../../../pub/lib/jquery/jquery.js
+  - ../../../pub/lib/jquery/jquery.cookie.js
   - ../../../pub/lib/jquery/head.js
   - ../../../pub/lib/jquery/jquery.validate.js
   - ../../../pub/lib/jquery/jquery.metadata.js
