--- a/fixture/community2/core/Mage/ImportExport/data/ImportExport.yml
+++ b/fixture/community2/core/Mage/ImportExport/data/ImportExport.yml
@@ -29,23 +29,6 @@
 #*******************************************************
 #*       Test data for customer creation(Backend)      *
 #*******************************************************
-generic_customer_account:
-    associate_to_website: Main Website
-    group: General
-    prefix: Mr.
-    first_name: first_%randomize%
-    middle_name: middle_%randomize%
-    last_name: last_%randomize%
-    suffix: %noValue%
-    email: test_admin_%randomize%@unknown-domain.com
-    date_of_birth: %noValue%
-    tax_vat_number: %noValue%
-    gender: Male
-    send_welcome_email: %noValue%
-    send_from: %noValue%
-    password: 123123q
-    auto_generated_password: %noValue%
-
 generic_customer_required_fields:
     associate_to_website: Main Website
     group: General
@@ -53,35 +36,6 @@ generic_customer_required_fields:
     last_name: last_%randomize%
     email: test_admin_%randomize%@unknown-domain.com
     password: 123123q
-
-generic_customer_attribute:
-   input_type: Text Field
-   attribute_code: attr_ie_%randomize%
-   default_text_field_value: attr_default_%randomize%
-   values_required: No
-   input_validation: None
-   min_text_length: 1
-   max_text_length: 255
-   input_filter: None
-   used_for_customer_segment: No
-   visible_on_frontend: Yes
-   sort_order: 1
-   used_in_forms: Customer Account Edit, Customer Registration
-   admin_title: Text_Field_Admin_%randomize%
-   store_view_titles:
-        Default Store View: Text_Field_StoreView
-
-generic_customer_attribute_yesno:
-   input_type: Yes/No
-   attribute_code: attr_ie_%randomize%
-   values_required: No
-   used_for_customer_segment: No
-   visible_on_frontend: Yes
-   sort_order: 1
-   used_in_forms: Customer Account Edit, Customer Registration
-   admin_title: Text_Field_Admin_%randomize%
-   store_view_titles:
-        Default Store View: Text_Field_StoreView
 
 customer_account_with_attribute:
     associate_to_website: Main Website
@@ -192,23 +146,6 @@ customer_account_female_address:
     fax: 530-918-3581
     default_billing_address: Yes
     default_shipping_address: Yes
-
-generic_customer_address_attribute:
-   input_type: Text Field
-   attribute_code: attr_ie_%randomize%
-   default_text_field_value: attr_default_%randomize%
-   input_validation: None
-   min_text_length: 1
-   max_text_length: 255
-   values_required: No
-   input_filter: None
-   is_used_for_customer_segment: No
-   is_visible: Yes
-   sort_order: 1
-   used_in_forms: Customer Address Registration, Customer Account Address
-   admin_title: Text_Field_Admin_%randomize%
-   store_view_titles:
-        Default Store View: Text_Field_StoreView
 
 generic_customer_account:
     associate_to_website: Main Website
@@ -677,3 +614,30 @@ generic_finance_csv:
     store_credit: %noValue%
     reward_points: %noValue%
     action: %noValue%
+generic_customer_csv:
+    _website: base
+    _store: default
+    email: test_admin_%randomize%@unknown-domain.com
+    firstname: Harold
+    lastname: Lefler
+    middlename: %noValue%
+    confirmation: %noValue%
+    created_at: %noValue%
+    created_in: %noValue%
+    default_billing: %noValue%
+    default_shipping: %noValue%
+    disable_auto_group_change: %noValue%
+    dob: %noValue%
+    gender: %noValue%
+    group_id: '1'
+    prefix: %noValue%
+    reward_update_notification: 1
+    reward_warning_notification: 1
+    rp_token: %noValue%
+    rp_token_created_at: %noValue%
+    password: %noValue%
+    password_hash: %noValue%
+    store_id: %noValue%
+    website_id: %noValue%
+    suffix: %noValue%
+    taxvat: %noValue%
