Implemented MAGETWO-1957: CR Changes

--- a/dev/tests/functional/fixture/community2/core/Mage/ImportExport/data/ImportExport.yml
+++ b/dev/tests/functional/fixture/community2/core/Mage/ImportExport/data/ImportExport.yml
@@ -55,26 +55,6 @@ customer_account_with_attribute:
     auto_generated_password: %noValue%
     custom_attribute: custom_attr_%randomize%
 
-#Test data for Customer Addresses file export
-generic_address:
-    prefix: %noValue%
-    first_name: Ronald_%randomize%
-    middle_name: J.
-    last_name: Jackson_%randomize%
-    suffix: %noValue%
-    company: Earl Abel's
-    street_address_line_1: 209 Capitol Avenue
-    street_address_line_2: Suite 200
-    city: Mccordsville
-    country: United States
-    state: Indiana
-    region: %noValue%
-    zip_code: 46055
-    telephone: 765-531-8811
-    fax: %noValue%
-    default_billing_address: %noValue%
-    default_shipping_address: %noValue%
-
 customer_account_male:
     associate_to_website: Main Website
     group: General
@@ -147,22 +127,6 @@ customer_account_female_address:
     default_billing_address: Yes
     default_shipping_address: Yes
 
-generic_customer_account:
-    associate_to_website: Main Website
-    group: General
-    prefix: Mr.
-    first_name: first_%randomize%
-    middle_name: middle_%randomize%
-    last_name: last_%randomize%
-    suffix: %noValue%
-    email: test_admin_%randomize%@unknown-domain.com
-    date_of_birth: %noValue%
-    tax_vat_number: %noValue%
-    gender: Male
-    send_welcome_email: %noValue%
-    send_from: %noValue%
-    password: 123123q
-    auto_generated_password: %noValue%
 
 import_main_file_required_fields:
    email: %noValue%
@@ -606,14 +570,8 @@ generic_address_csv:
     telephone: 978-875-6394
     _address_default_billing_: 0
     _address_default_shipping_: 0
-    action: %noValue%
-generic_finance_csv:
-    email: %noValue%
-    _website: base
-    _finance_website: base
-    store_credit: %noValue%
-    reward_points: %noValue%
-    action: %noValue%
+    _action: %noValue%
+
 generic_customer_csv:
     _website: base
     _store: default
@@ -641,3 +599,4 @@ generic_customer_csv:
     website_id: %noValue%
     suffix: %noValue%
     taxvat: %noValue%
+    _action: %noValue%
