--- a/dev/tests/functional/fixture/enterprise2/core/Mage/ImportExport/data/ImportExport.yml
+++ b/dev/tests/functional/fixture/enterprise2/core/Mage/ImportExport/data/ImportExport.yml
@@ -33,9 +33,9 @@ generic_finance_csv:
    email: %noValue%
    _website: base
    _finance_website: base
-   store_credit: 4321.0000
-   reward_points: 1234
-
+   store_credit: 0
+   reward_points: 0
+   _action: %noValue%
 csv_new_master_5622:
     email: %noValue%
     _website: base
