--- a/dev/tests/functional/fixture/enterprise2/core/Mage/Customer/uimap/admin/Customers.yml
+++ b/dev/tests/functional/fixture/enterprise2/core/Mage/Customer/uimap/admin/Customers.yml
@@ -62,9 +62,10 @@ edit_customer:
                                         comment: //input[@id='reward_comment']
                             -
                                 current_reward_balance:
-                                    xpath: //div[@id='rewardPointsBalanceGrid']
+                                    xpath: //div[@id='customer_info_tabs_customer_edit_tab_reward_content']//div[@id='rewardPointsBalanceGrid']
                                     fields:
                                         current_balance: //table[@id='rewardPointsBalanceGrid_table']/tbody/tr[td[contains(text(),'%webSiteName%')]]/td[2]
+                                        balance_is_present: //table[@id='rewardPointsBalanceGrid_table']/tbody/tr[td[contains(text(),'%webSiteName%')]]/td[1]
         buttons:
             manage_shopping_cart: //button[span='Manage Shopping Cart']
             back: //button[span='Back']
