Implement MAGETWO-1185: javascript refactor - validate.js for add validation method - js unit test for validate.js

--- a/dev/tests/js/jsTestDriver.conf
+++ b/dev/tests/js/jsTestDriver.conf
@@ -12,6 +12,8 @@ load:
   - ../../../pub/lib/mage/mage.js
   - ../../../pub/lib/mage/localization/json/translate_de.js
   - ../../../pub/lib/mage/localization/*.js
+  - ../../../pub/lib/mage/validation/*.js
 test:
   - ../../../dev/tests/js/testsuite/mage/localization/*.js
   - ../../../dev/tests/js/testsuite/mage/*.js
+  - ../../../dev/tests/js/testsuite/mage/validation/*.js
