--- a/dev/tests/functional/config/config.yml
+++ b/dev/tests/functional/config/config.yml
@@ -161,13 +161,13 @@ applications:
         fallbackOrderHelper: 'Community2, Community17, Core'
         areas:
             admin:
-                url: 'http://kq.varien.com/builds/goncharuk/magento2/admin/'
+                url: 'http://www.localhost.com/magento2_community/control/'
                 base_page_uimap: 'log_in_to_admin'
                 uimap_path: 'admin'
                 login: 'admin'
                 password: '123123q'
             frontend:
-                url: 'http://kq.varien.com/builds/goncharuk/magento2/'
+                url: 'http://www.localhost.com/magento2_community/'
                 base_page_uimap: 'home_page'
                 uimap_path: 'frontend'
             paypal_sandbox: *paypalSandbox
@@ -188,4 +188,4 @@ applications:
                 uimap_path: 'frontend'
             paypal_sandbox: *paypalSandbox
             paypal_developer: *paypalDeveloper
-    default: *m2ce
+    default: *ee112
